--- a/SpringRestService/src/main/resources/jdbc.properties
+++ b/SpringRestService/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 #DEV MySql
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/test
-#jdbc.username=root
-#jdbc.password=root
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/securedb
+jdbc.username=root
+jdbc.password=root
 
 #DEV Postgresql
 #jdbc.driverClassName=org.postgresql.Driver
@@ -17,7 +17,7 @@
 #jdbc.password=XCD7VyO4HvZS3zbcNxgGrMODBb
 
 #DEV MySql
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/securedb
-jdbc.username=root
-jdbc.password=root
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/securedb
+#jdbc.username=root
+#jdbc.password=root
